--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning to use Mocha.JS and Chai.JS",
   "main": "app.js",
   "scripts": {
-    "test": "mocha || true"
+    "test": "mocha  --recursive  --reporter landing || true"
   },
   "author": "",
   "license": "ISC",
